# secure-internet-relay-chat

./: .travis.yml  CMakeLists.txt  Client.cpp  Client.h  Client.hpp  Connection.cpp  Connection.h  Makefile  README.md  SecureInternetRelayChat_Server  SecureInternetRelayChat_Server.pro  Server.cpp  Server.h  Server.hpp  buffer.cpp  clientinfo.cpp  clientinfo.h  main.cpp  moc_Connection.cpp  moc_Server.cpp  parser.cpp  parser.h
doc/: SIRC.docx  SIRC.odt  SIRC.pptx
